--- a/src/index.css
+++ b/src/index.css
@@ -17,14 +17,9 @@
     max-width: 1440px;
     margin: 0 auto;
   }
-
-  /* .input {
-    @apply sm:flex-1 max-sm:w-full text-base leading-normal text-slate-gray pl-5 max-sm:p-5 outline-none sm:border-none border max-sm:border-slate-gray max-sm:rounded-full;
-  }  */
 }
 
 @layer components {
-  /* Media query for screens below 640px width */
   @media (max-width: 639px) {
     .custom-input.input-padding {
       width: 200px; /* Adjust the width value as needed */
@@ -33,13 +28,24 @@
 }
 
 
+  @media (max-width: 380px) {
+    .hello{
+      height: 600px; /* Adjust the width value as needed */
+    }
+  }
+
+
+
+
 @layer utilities {
   .padding {
     @apply sm:px-16 px-8 sm:py-24 py-12;
   }
 
+
+
   .inn{
-    @apply 
+    @apply h-56;
   }
 
   .padding-x {
@@ -73,3 +79,4 @@
 
   
 }
+
